syntax = "proto3";
 
option csharp_namespace = "Connection";
 


service TestConnection{
    rpc SayHello (HelloRequest) returns (HellResponce);
}

message HelloRequest {
  }

message HellResponce{
    bool status = 1;
}